[package]
name = "smo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="*", features=["full"]}
clap = {version="*", features=["derive"]}
serde = {version="*", features=["derive"]}
anyhow = "*"
nalgebra = "0.31.0"
bytes = "1.2.0"
bincode = "1.3.3"
thiserror = "1.0.31"
dashmap = "5.3.4"
log = "0.4.17"
