[package]
name = "smoo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "smo-rs"
test = false
bench = false
path = "src/main.rs"


[lib]
name = "smoo"
path = "src/lib.rs"

[dependencies]
tokio = {version="*", features=["full"]}
clap = {version="*", features=["derive"]}
serde = {version="*", features=["derive"]}
anyhow = "*"
nalgebra = {version="0.31.0", features=["serde-serialize"]}
bytes = "1.2.0"
thiserror = "1.0.31"
dashmap = "5.3.4"
hex = "0.4.3"
tracing = {version="0.1.36"}
tracing-subscriber = {version="0.3.15", features=["std", "env-filter", "fmt"]}
quickcheck = "1.0.3"
serde_json = "1.0.83"
futures = "0.3.23"

[workspace]
members = [
		"examples/proxy",
]
