[package]
name = "smoo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "smo-rs"
test = false
bench = false
path = "src/main.rs"


[lib]
name = "smoo"
path = "src/lib.rs"

[dependencies]
tokio = {version="1.21.2", features=["full"]}
clap = {version="4.0.18", features=["derive"]}
serde = {version="1.0.147", features=["derive"]}
anyhow = "1.0.58"
nalgebra = "0.31.0"
bytes = "1.2.0"
thiserror = "1.0.31"
dashmap = "5.3.4"
hex = "0.4.3"
tracing = {version="0.1.36"}
tracing-subscriber = {version="0.3.15", features=["std", "env-filter", "fmt"]}
serde_json = "1.0.83"
futures = "0.3.23"
serenity = "0.11.5"

[dev-dependencies]
quickcheck = "1.0.3"
test-log = {version="0.2.11", default-features=false, features=["trace"]}

[workspace]
members = [
		"examples/proxy",
		"examples/replay_client",
]
