[package]
name = "replay_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smoo = {path = "../../"}
tokio = "*"
tracing = {version="*"}
tracing-subscriber = {version="*", features=["std", "env-filter", "fmt"]}
